# ctp-rpc-generator

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  ThostFtdcUserApiStruct.h  cbuild.sh  ctp.pest  main.cpp  note.sh  result.txt
antlr/: HeaderFileParser.g4
src/: HeaderFileParserImpl.cpp  HeaderFileParserImpl.h  main.rs
testdata/: ThostFtdcMdApi_utf8.h  ThostFtdcTraderApi_utf8.h  ThostFtdcUserApiDataType_utf8.h  ThostFtdcUserApiStruct_utf8.h  demo.h  sample.h
